# python-tetris

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: pages.yml  publish.yml  test.yml
docs/: .prettierignore  build.sh  conf.py  custom.css  frame.html.jinja2  index.rst  license.rst  module.html.jinja2  quickstart.rst  syntax-highlighting.css  theme.css
docs/api/: tetris.board.rst  tetris.engine.abcs.rst  tetris.engine.gravity.rst  tetris.engine.queue.rst  tetris.engine.rotation.rst  tetris.engine.rst  tetris.engine.scorer.rst  tetris.game.rst  tetris.impl.custom.rst  tetris.impl.gravity.rst  tetris.impl.modern.rst  tetris.impl.presets.rst  tetris.impl.queue.rst  tetris.impl.rotation.rst  tetris.impl.rst  tetris.impl.scorer.rst  tetris.rst  tetris.types.rst
examples/: cli.py
tetris/: __init__.py  __main__.py  board.py  consts.py  encoder.py  engine.py  game.py  mixins.py  types.py
tetris/engine/: __init__.py  abcs.py  gravity.py  queue.py  rotation.py  scorer.py
tetris/impl/: __init__.py  custom.py  gravity.py  modern.py  presets.py  queue.py  rotation.py  scorer.py
