[tool.poetry]
name = "tetris"
version = "0.4.0"
description = "Simple and modular tetris library"
authors = ["Sofia \"dzshn\" N. L. <zshn@pm.me>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dzshn/python-tetris"
repository = "https://github.com/dzshn/python-tetris"
keywords = ["tetris", "stacker"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
include = ["examples/"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.21.4"
typing-extensions = "^4.0.1"

[tool.poetry.dev-dependencies]
tox = "^3.24.5"

[tool.black]

[tool.mypy]
files = [
    "examples/*.py",
    "tetris/*.py"
]
python_version = "3.9"
# disallow_untyped_defs = true  # funky with overloads
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.isort]
profile = "google"
force_sort_within_sections = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
