[tool.poetry]
name = "tetris"
version = "0.5.0"
description = "Simple and modular tetris library"
authors = ["Sofia \"dzshn\" N. L. <zshn@pm.me>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dzshn/python-tetris"
repository = "https://github.com/dzshn/python-tetris"
documentation = "https://python-tetris.readthedocs.io/"
keywords = ["tetris", "stacker"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
include = ["examples/"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.21.4"
typing-extensions = "^4.0.1"
Sphinx = { version = "^4.4.0", optional = true }
furo = { version = "^2022.3.4", optional = true }
numpydoc = { version = "^1.2", optional = true }

[tool.poetry.dev-dependencies]
tox = "^3.25.0"
Sphinx = "^4.4.0"
furo = "^2022.3.4"
numpydoc = "^1.2"
# Their github is still updated but the last release was in May 17 2021
pydocstyle = {git = "https://github.com/PyCQA/pydocstyle"}

[toll.poetry.extras]
docs = ["Sphinx", "furo", "numpydoc"]

[tool.black]

[tool.mypy]
files = [
    "examples/*.py",
    "tetris/*.py"
]
python_version = "3.9"
# disallow_untyped_defs = true  # funky with overloads
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.isort]
profile = "google"
force_sort_within_sections = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
